добавлен абзац в файл index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
     <h1>First file HTML </h1>
+
+    <p>
+        Система управления версиями  Git работает. ы
+    </p>
 </body>
 </html>
