вставлена картинка в файл index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <h1>First file HTML </h1>
 
     <p>
-        Система управления версиями  Git работает. ы
+        Система управления версиями  Git работает!!! 
     </p>
+    <img src="./images/_20201227_073259.JPG" width="600" height="800"> 
 </body>
 </html>
