добавлена ссылка на файл.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         Система управления версиями  Git работает!!! 
     </p>
     <img src="./images/_20201227_073259.JPG" width="600" height="800"> 
-</body>
+    <a href="./file.html">  здесь файл </a>
+ </body>
 </html>
